using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags
{
    public const string Movement = "Movement";

    public const string Punch_1_TRIGGER = "Punch1";
    public const string Punch_2_TRIGGER = "Punch2";
    public const string Punch_3_TRIGGER = "Punch3";

    public const string Kick_1_TRIGGER = "Kick1";
    public const string Kick_2_TRIGGER = "Kick2";

    public const string Attack_1_Trigger = "Attack1";
    public const string Attack_2_Trigger = "Attack2";
    public const string Attack_3_Trigger = "Attack3";
    public const string Idle_Animation = "Idle";

    public const string Knock_Down_Trigger = "KnockDown";
    public const string Stand_up_Trigger = "Standup";
    public const string Hit_Trigger = "Hit";
    public const string Death_Trigger = "Death";

}
public class Axis 
{
    public const string Horizontal_Axis = "Horizontal";
    public const string Vertical_Axis = "Vertical";
}

public class Tags 
{
    public const string Ground_Tag = "Ground";
    public const string Player_Tag = "Player";
    public const string Enemy_Tag = "Enemy";

    public const string Left_Arm_Tag = "LeftArm";
    public const string Left_Leg_Tag = "LeftLeg";
    public const string Untagged_Tag = "Untagged";
    public const string Main_Camera_Tag = "MainCamera";
    public const string Health_UI = "HealthUI";
}
